Monash style web site

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 remote_theme: mmistakes/minimal-mistakes
-title: "BAPPENAS Masterclass - Working with big data"
-description: "Delivered by Professor Dianne Cook"
+title: "Dianne Cook"
+description: "Data Science | Monash University"
 
 # Optional Monash colour palette via style overrides
 minimal_mistakes_skin: "default"
